Ys (#22)
* fix: getTitle() 복구

* feat: 진행률 추가 및 자잘한 버그 수정

* chore: cleanup